--- a/app/assets/javascripts/home/_home.html
+++ b/app/assets/javascripts/home/_home.html
@@ -14,6 +14,7 @@
         <span>
          <a href="#/posts/{{post.id}}">Comments</a>
         </span>
+        posted by <a ng-href="#/users/{{post.user.username}}">{{post.user.username}}</a>
        </span >
   
      </div>
